<resources>
    <string name="app_name">Building Maintenance App</string>
    <string name="Login">Login</string>
    <string name="Email">Email:</string>
    <string name="Password">Password</string>
    <string name="BuildingCode">Building Code</string>
    <string name="Resident_AUTH_HEADER">Resident Account</string>
    <string name="authpageChangeTv">Don\'t you have an account?</string>
    <string name="choice1">Create a resident account</string>
    <string name="choice2">Create a Building Account</string>
    <string name="Neighbours_header">See your neighbours</string>
    <string name="settings_header">Settings</string>
    <string name="Events_history_header">Events history</string>
    <string name="Create_Resident_Account">Resident Registration</string>
    <string name="switchToLogin_text">Already you have a account?</string>
    <string name="Register_Resident_text">Register</string>
</resources>