<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context=".Activities.RegisterActivity">


    <TextView
        android:id="@+id/ResidentRegistHeader"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/Create_Resident_Account"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextResidentRegEmailAddress"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#267FC6"
        android:textColorHint="#25DD2C" />

    <EditText
        android:id="@+id/editTextResidentRegName"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"

        android:ems="10"
        android:hint="Name:"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#267FC6"
        android:textColorHint="#25DD2C" />


    <EditText
        android:id="@+id/editTextResidentRegPassword"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#FF03DAC5"
        android:textColorHint="#25DD2C" />
        <EditText
        android:id="@+id/editTextResidentRegNumber"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:ems="10"
            android:hint="@string/BuildingCode"
            android:minHeight="48dp"
            android:textColor="#F3EBEB"
            android:textColorHighlight="#FF03DAC5"
            android:textColorHint="#25DD2C"
        android:inputType="number" />


    <Button
        android:id="@+id/registerResidentBtn"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#1D1E20"
        android:gravity="center"
        android:text="@string/Register_Resident_text" />

    <TextView
        android:id="@+id/textViewAlready"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/switchToLogin_text"
        android:textColor="#4CAF50"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonLoginPage"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:buttonTint="#8BC34A"
            android:text="Log in your account"
            android:textColor="#F4F3EB"
            android:textColorLink="#8BC34A" />

        <RadioButton
            android:id="@+id/radioButtonCreateBuild"
            android:layout_width="204dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:buttonTint="#8BC34A"
            android:text="@string/choice2"
            android:textColor="#F6F5EF" />

    </RadioGroup>




</LinearLayout>