<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="348dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#267FC6"
        android:textColorHint="#25DD2C" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#FF03DAC5"
        android:textColorHint="#25DD2C" />


    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:ems="10"
        android:hint="@string/BuildingCode"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#FF03DAC5"
        android:textColorHint="#25DD2C" />

    <Button
        android:id="@+id/button4"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#1D1E20"
        android:gravity="center"
        android:text="@string/Login" />


</LinearLayout>