<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context=".Activities.BuildingRegisterActivity">


    <TextView
        android:id="@+id/buildHeader"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="Building Registration"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextBuildEmailAddress"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#267FC6"
        android:textColorHint="#25DD2C" />

    <EditText
        android:id="@+id/editTextTextBuildPassword"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#FF03DAC5"
        android:textColorHint="#25DD2C" />
    <EditText
        android:id="@+id/editTextManagerName"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:ems="10"
        android:hint="Manager Name:"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#FF03DAC5"
        android:textColorHint="#25DD2C" />
    <EditText
        android:id="@+id/editTextBuildingName"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:ems="10"
        android:hint="Building Name:"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#FF03DAC5"
        android:textColorHint="#25DD2C" />
    <EditText
        android:id="@+id/editTextBuildingAddress"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:ems="10"
        android:hint="Building Address:"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#F3EBEB"
        android:textColorHighlight="#FF03DAC5"
        android:textColorHint="#25DD2C" />



    <Button
        android:id="@+id/registerBtn"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#1D1E20"
        android:gravity="center"
        android:text="Register" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="0dp" />


    <TextView
        android:id="@+id/validationQuestion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="Already you have an account?"
        android:textColor="#4CAF50"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonCreateResident"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:buttonTint="#8BC34A"
            android:text="@string/choice1"
            android:textColor="#F3F1E5"
            android:textColorHighlight="#4CAF50"
            android:textColorLink="#8BC34A" />

        <RadioButton
            android:id="@+id/radioButtonLogin"
            android:layout_width="204dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:buttonTint="#8BC34A"
            android:text="Log in to your account"
            android:textColor="#EDECE2"
            android:textColorHighlight="#4CAF50"
            android:textColorLink="#8BC34A" />

    </RadioGroup>



</LinearLayout>